force-app/main/default/objects/Content_Tactic__c/Content_Tactic__c.object-meta.xml
<CustomObject>
    <label>Content Tactic</label>
    <nameField>
        <displayFormat>CT-{0}</displayFormat>
        <label>Content Tactic Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Content Tactics</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>