force-app/main/default/objects/Content_Tactic__c/fields/CampaignID__c.field-meta.xml
<CustomField>
    <fullName>CampaignID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <inlineHelpText>in org 62</inlineHelpText>
    <label>CampaignID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>