force-app/main/default/objects/Content_Tactic__c/fields/Content__c.field-meta.xml
<CustomField>
    <fullName>Content__c</fullName>
    <label>Content</label>
    <referenceTo>Platform_Content_dywtbas__c</referenceTo>
    <relationshipLabel>Content Tactics</relationshipLabel>
    <relationshipName>Content_Tactics</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>