force-app/main/default/objects/Content_Tactic__c/fields/org62_Link__c.field-meta.xml
<CustomField>
    <fullName>org62_Link__c</fullName>
    <formula>HYPERLINK(&quot;https://org62.lightning.force.com/one/one.app#/sObject/&quot; +   CampaignID__c   + &quot;/view&quot;, &quot;open&quot;, &quot;blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>org62 Link</label>
    <type>Text</type>
</CustomField>