force-app/main/default/objects/Content_Tactic__c/fields/Tactic__c.field-meta.xml
<CustomField>
    <fullName>Tactic__c</fullName>
    <label>Tactic</label>
    <referenceTo>Tactic_dywtbas__c</referenceTo>
    <relationshipLabel>Content</relationshipLabel>
    <relationshipName>Content_Tactics</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>