force-app/main/default/objects/Content_Tactic__c/fields/X3_word_summary__c.field-meta.xml
<CustomField>
    <fullName>X3_word_summary__c</fullName>
    <inlineHelpText>from org62 campaign</inlineHelpText>
    <label>3 word summary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>